# stem_volume_calculations

./: .gitignore  .gitlab-ci.yml  README.md  duplicates_with_counts_and_indices.csv  genus_dict.py  pyproject.toml
.github/workflows/: ci.yml
data/: file2.csv  volume_calculated.feather
data/inputs/: trees_sampled.csv
scripts/: clean_data.py  clean_data_test.ipynb  convert_feather_to_csv.py  find_duplicates.py  generate_common_name_formula_map.py  generate_genera_formula_map.py  generate_species_formula_map.py
src/stem_volumes/: __init__.py  common_name_formula_map.py  formulas.py  genus_dict.py  genus_formula_map.py  species_to_formula_map.py  utils.py
tests/: test_common_formula_map.py  test_extract_species_function.py  test_find_duplicates.py  test_formulas.py  test_formulas_application.py  test_genus_formula_map.py  test_utils.py
