[project]
name = "stem-volumes"
version = "0.1.0"
description = "Implementation of several formulas for calculating the stem volume of trees"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docstring-parser>=0.16",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "I", # isort
    "D", # docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
